--- a/style.css
+++ b/style.css
@@ -27,6 +27,13 @@ background-color: #8192AD;
 }
 input { 
 grid-column: 1;
+height: 30px;
+border-radius: 15px;
+border-width: 1px;
+margin-top: 10px;
+margin-bottom: 10px;
+font-family: monospace;
+text-align: center;
 }
 #submitButton{
 grid-column: 1 ;
@@ -34,3 +41,12 @@ grid-column: 1 ;
 #addBtn{ 
 grid-column: 1;
  }
+
+ button{ 
+background-color: #8192AD; 
+font-family: monospace;
+padding: 20px;
+border-radius: 10px;
+border-width: 0;
+font-size: 20px;
+  }
