--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{ 
 
 height: 100vh;
+background-color: #160835;
 
 }
 	#cardsContainer{ 
@@ -14,7 +15,7 @@ height: 100vh;
 border-width:2px;
 
 border-radius: 10px;
-background-color: #8192AD;
+background-color: #9C973E;
   padding: 10px;
   font-family: monospace;
   text-align: center;
@@ -43,10 +44,24 @@ grid-column: 1;
  }
 
  button{ 
-background-color: #8192AD; 
+background-color: #9C973E; 
 font-family: monospace;
 padding: 20px;
 border-radius: 10px;
 border-width: 1;
 font-size: 20px;
   }
+  button:hover{
+
+  	background-color:#7A853E;
+  }
+  .titleHeader{ 
+
+  text-align:center;
+  font-family: monospace;
+  font-size: 36px;
+   color: #7A853E;
+
+
+
+ }
