center addbook forum

--- a/style.css
+++ b/style.css
@@ -23,8 +23,11 @@ background-color: #9C973E;
   }
 
   #forumContainer{ 
- display: grid;
- grid-template-columns: 1fr 1fr 1fr;
+ display: flex;
+ flex-direction: column;
+ margin-left: 40vh;
+ margin-right: 40vh;
+
 }
 input { 
 grid-column: 1;
